# note_taking_bot

./: .env  .env.example  .gitignore  Dockerfile.core_app  README.md  abc.drawio  compose.yaml  main.py  new_account.drawio  pyproject.toml  rana_universe_main.py  some_ideas.md
000_user_msg/: user_message.txt
check_some_logics/: email_storing_logic_check.py
gemini_api_modules/: gemini_api.py
my_modules/: admin_related_code.py  bot_config_settings.py  inline_keyboard_buttons.py  inline_keyboards.py  inline_keyboards_enum_values.py  inline_keyboards_old.py  logger_related.py  message_templates.py  pydantic_validation_logic.py  rana_needed_things.py  reply_keyboard_buttons.py  some_constants.py  some_inline_keyboards.py  some_reply_keyboards.py
my_modules/callback_modules/: note_related.py  some_buttons.py  start_cmd_buttons.py
my_modules/cmd_handler_modules/: add_points.py  add_points_module.py  ai_answer_module.py  all_edited_command.py  help_cmd.py  help_module.py  start_module.py  user_register.py  zzz_extra_things.py
my_modules/conv_handlers_modules/: account_register.py  edit_note.py  example_1.py  new_account.py  new_account_old.py  new_note.py  note_making.py
my_modules/database_code/: database_make.py  db_functions.py  models_table.py  (+1 more)
z_extra_things/: check_data_length.py  example_1.py  example_conversationbot.py  example_conversationbot2.py  example_inlinebot.py  example_inlinekeyboard.py  example_inlinekeyboard2.py  example_timerbot.py  main_conversation_learning.py  test_my_custom_logger.py  z_example_1.py
z_learning_database/: main_db.py
(+13 files in other folders)
